[gd_scene load_steps=2 format=3 uid="uid://debsygk02r42o"]

[ext_resource type="Script" uid="uid://cvv7uwfq7viy0" path="res://scenes/workshop/workshop.gd" id="1_6d5g3"]

[node name="Workshop" type="Node2D"]
script = ExtResource("1_6d5g3")

[node name="Background" type="Sprite2D" parent="."]

[node name="Stations" type="Node2D" parent="."]

[node name="Cauldron" type="Node2D" parent="Stations"]

[node name="Distillery" type="Node2D" parent="Stations"]

[node name="HerbStation" type="Node2D" parent="Stations"]

[node name="StudyTable" type="Node2D" parent="Stations"]

[node name="InteractionAreas" type="Node2D" parent="."]

[node name="CauldronArea" type="Area2D" parent="InteractionAreas"]

[node name="DistilleryArea" type="Area2D" parent="InteractionAreas"]

[node name="HerbArea" type="Area2D" parent="InteractionAreas"]

[node name="StudyArea" type="Area2D" parent="InteractionAreas"]
